--- a/FinalModel_General.ipynb
+++ b/FinalModel_General.ipynb
@@ -1597,7 +1597,7 @@
    "id": "4ce99c48",
    "metadata": {},
    "source": [
-    "Models"
+    "### Models"
    ]
   },
   {
@@ -1915,7 +1915,7 @@
    "id": "731e649d",
    "metadata": {},
    "source": [
-    "Results Models"
+    "### Results Models"
    ]
   },
   {
@@ -2192,7 +2192,7 @@
    "id": "7577640c",
    "metadata": {},
    "source": [
-    "Graphs of the Result Data"
+    "### Graphs of the Result Data"
    ]
   },
   {
